<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xdja.voipsdk.backdoor.BackDoorActivity">

    <Button
        android:id="@+id/clear_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_notification"/>

    <EditText
        android:id="@+id/people_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/people_count"
        android:textColorHint="@android:color/holo_red_light"
        android:textColor="@android:color/holo_red_light"
        android:inputType="number"/>

    <EditText
        android:id="@+id/count_per_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/count_per_people"
        android:textColorHint="@android:color/holo_red_light"
        android:textColor="@android:color/holo_red_light"
        android:inputType="number"/>

    <Button
        android:id="@+id/generate_call_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_call_log"/>


</LinearLayout>
